add (post, comment, user) create func (ctrl, svc, rep)